I've set up Firebase and authenticated backend using mesibo user token. I am yet to succeed in providing dynamic authentication via API.I've enabled FCM w/ latest version and it works fine

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:name=".MainApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="Mesibo Messenger"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:testOnly="false"
         android:requestLegacyExternalStorage="true"
