--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,12 @@
-
 apply plugin: 'com.android.application'
 apply from: "https://cdn.mesibo.com/android/mesibo.gradle"
-
 
 ext {
     PUBLISH_VERSION = "1.0.0"
     PUBLISH_VERSION_CODE = 1
 }
 
-
 android {
-
     compileSdkVersion project.Mesibo_compileSdkVersion
 
     defaultConfig {
@@ -22,6 +18,9 @@ android {
         buildConfigField "String", "BUILD_VERSION", "\"${project.PUBLISH_VERSION}\""
         buildConfigField "String", "BUILD_TIMESTAMP", "\"${project.Mesibo_buildDate}\""
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+
+        // Enable Multidex to overcome 64K method reference limit
+        multiDexEnabled true
     }
 
     lintOptions {
@@ -29,10 +28,9 @@ android {
     }
 
     compileOptions {
-      sourceCompatibility 1.8
-      targetCompatibility 1.8
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
-
 
     buildTypes {
         release {
@@ -45,7 +43,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-
     }
 }
 
@@ -67,8 +64,10 @@ dependencies {
     implementation "com.google.android.gms:play-services-maps:${project.Mesibo_playServiceVersion}"
     implementation "com.google.android.gms:play-services-location:${project.Mesibo_playServiceVersion}"
     implementation "com.google.android.gms:play-services-places:${project.Mesibo_playServiceVersion}"
-    implementation "com.google.firebase:firebase-messaging:18.0.0"
-    implementation 'com.google.firebase:firebase-core:16.0.9'
+
+    // Updated Firebase Dependencies
+    implementation "com.google.firebase:firebase-messaging:23.3.1"  // Latest version of Firebase Messaging
+    implementation "com.google.firebase:firebase-analytics:21.1.1"  // Added Firebase Analytics for logging
 
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     annotationProcessor 'com.jakewharton:butterknife:7.0.1'
@@ -78,8 +77,10 @@ dependencies {
     implementation "com.mesibo.api:mesibo:${project.MesiboVersion_Api}"
     implementation "com.mesibo.api:ui:${project.MesiboVersion_Ui}"
     implementation "com.mesibo.api:callui:${project.MesiboVersion_CallUi}"
+
+    // Add Multidex support for larger apps
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
 
-// this line needs to be at bottom else it gives error of version conflict
-apply plugin: 'com.google.gms.google-services'
-
+// Apply Firebase Plugin for Firebase Services
+apply plugin: 'com.google.gms.google-services'  // Firebase plugin
